--- a/ansible.cfg
+++ b/ansible.cfg
@@ -2,8 +2,14 @@
 # Inventory file location
 inventory = ./inventory/hosts
 
+# Ignore these extensions when parsing inventory directory
+inventory_ignore_extensions = .example, .sample, .md, .txt, .ini.bak
+
 # Disable host key checking for easier initial setup
 host_key_checking = False
+
+# Set to True to see deprecation warnings; False to suppress (we use module_defaults in playbooks for gather_timeout)
+deprecation_warnings = False
 
 # Log file location
 log_path = ./logs/ansible.log
@@ -17,15 +23,15 @@ retry_files_enabled = False
 # Default remote user
 remote_user = root
 
-# Gathering facts timeout
-gather_timeout = 30
-
 # Custom modules library
 library = ./library
 
 # Callback plugins for CMDB collection
 callback_plugins = ./callback_plugins
 callbacks_enabled = cmdb_collector
+
+# [gathering] gather_timeout removed: it triggered DEFAULT_GATHER_TIMEOUT deprecation.
+# Playbooks with gather_facts: yes use module_defaults: ansible.builtin.setup: { gather_timeout: 30 }
 
 [privilege_escalation]
 # Enable privilege escalation by default
