--- a/playbooks/get_config_routeros.yml
+++ b/playbooks/get_config_routeros.yml
@@ -3,6 +3,9 @@
 - name: Get MikroTik RouterOS export configuration
   hosts: routers
   gather_facts: no
+  vars:
+    ansible_connection: ansible.netcommon.network_cli
+    ansible_network_os: community.routeros.routeros
   tasks:
     - name: Get MikroTik RouterOS export configuration
       community.routeros.command:
