--- a/playbooks/mikrotik-router-check.yml
+++ b/playbooks/mikrotik-router-check.yml
@@ -3,6 +3,8 @@
   hosts: routers
   gather_facts: no
   vars:
+    ansible_connection: ansible.netcommon.network_cli
+    ansible_network_os: community.routeros.routeros
     ansible_command_timeout: 30
   tasks:
     - name: Check system resources
