--- a/Dockerfile.worker
+++ b/Dockerfile.worker
@@ -8,6 +8,9 @@ RUN dnf update -y && \
     dnf install -y \
     python3 \
     python3-pip \
+    python3-devel \
+    gcc \
+    libssh-devel \
     openssh-clients \
     sshpass \
     git \
@@ -21,7 +24,7 @@ RUN pip3 install --no-cache-dir ansible
 WORKDIR /app
 
 # Install Python dependencies for worker
-RUN pip3 install --no-cache-dir requests psutil python-socketio[client] websocket-client paramiko
+RUN pip3 install --no-cache-dir requests psutil python-socketio[client] websocket-client paramiko pymongo ansible-pylibssh
 
 # Copy worker service
 COPY worker/ ./worker/
