--- a/playbooks/software-inventory.yml
+++ b/playbooks/software-inventory.yml
@@ -2,6 +2,9 @@
 - name: Software Inventory Collection
   hosts: all
   gather_facts: yes
+  module_defaults:
+    ansible.builtin.setup:
+      gather_timeout: 30
   tasks:
     - name: Get all installed packages (Debian/Ubuntu)
       shell: dpkg-query -W -f='${Package} ${Version}\n' 2>/dev/null | head -n 100
