test(bootstrap): deployment and data tests, test matrix T1–T9, run_tests.sh
- test_data_backup_restore: real FlatFileStorage, MongoDB when available
- test_deployment_helper, test_deployment_api: real deployment code
- test_deployment_single: single compose structure
- test_deployment_matrix: integration tests T1–T9 (PRIMARY_URL)
- scripts/run_tests.sh: venv, PYTHONPATH, full pytest
- tests/README.md: real tests policy, run_tests.sh, matrix
- tests/TEST_COVERAGE_AUDIT.md: coverage audit
- .gitignore: .venv/, backup tar pattern
Stage 6 and test policy (memory.md §8).

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ __pycache__/
 .Python
 env/
 venv/
+.venv/
 ENV/
 *.egg-info/
 .eggs/
@@ -55,10 +56,11 @@ logs/
 # Contains schedules, history, inventory data, host_facts
 config/
 
-# Temporary files
+# Temporary files and local backups (do not commit)
 /tmp/
 *.tmp
 *.bak
+ansible-simpleweb-backup-*.tar
 
 # MongoDB data (if running locally outside Docker)
 data/db/
